# f1-penalty-agent

./: .dockerignore  .env.example  .firebaserc  .gitignore  .pre-commit-config.yaml  DEVELOPER.md  Dockerfile  LICENSE  LIVE-UPDATES-PLAN.md  PRODUCTION_ROADMAP.md  README.md  SECURITY.md  analyze_scores.py  app.py  cloud_run_logs.txt  cloudbuild-backend.yaml  cloudbuild-frontend.yaml  cloudbuild.yaml  cloudbuild.yaml.bak  docker-compose.yml  firebase.json  pyproject.toml  pytest.ini  test_embed.py
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  infrastructure.yml  manage-secrets.yml  release.yml  sync-secrets.yml
data/test_chroma/: chroma.sqlite3
data/test_chroma_vs/: chroma.sqlite3
data/test_debug/: chroma.sqlite3
data/test_debug_chroma/: chroma.sqlite3
data/test_minimal/: chroma.sqlite3
data/test_no_embed/: chroma.sqlite3
docs/: MIGRATION_GOOGLE_GENAI.md  agent_scalability_review.md  free_tier_limits.md  hexagonal_refactor_plan.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  Navbar.tsx  PenaltyAgent.tsx  SetupControl.css  SetupControl.tsx
frontend/src/context/: ChatContext.tsx
frontend/src/pages/: AdminPage.tsx  SetupPage.tsx  StatusPage.tsx
frontend/src/services/: api.ts
infra/: README.md  k3d-config.yaml
infra/k8s/: namespace.yaml
infra/k8s/chromadb/: deployment.yaml  kustomization.yaml
infra/terraform/: README.md  apis.tf  cloudbuild.tf  cloudrun.tf  iam.tf  main.tf  outputs.tf  qdrant.tf  secrets.tf  variables.tf
infra/terraform/bootstrap/: main.tf  variables.tf
scripts/: check_database_bom.py  compare_keys.py  debug_crash.py  debug_deployed_api.py  setup.ps1  setup.sh  setup_dev.py  setup_gh_secrets.ps1  setup_gh_secrets.sh  setup_github_project.ps1  setup_infra.py  setup_qdrant.py  test_api_json_response.py  test_from_wsl.py  test_gemini_bom.py  test_local_api.py  test_local_comprehensive.py  test_logging_encoding.py  verify_fix.py
src/: __init__.py  config.py  logging_config.py
src/adapters/common/: __init__.py  debug.py  exception_handler.py
src/adapters/inbound/: __init__.py
src/adapters/inbound/api/: __init__.py  deps.py  main.py  models.py
src/adapters/inbound/api/routers/: __init__.py  chat.py  health.py  setup.py
src/adapters/inbound/cli/: __init__.py  commands.py  console.py  progress.py
src/adapters/llm/: gemini_llm.py
src/adapters/outbound/: __init__.py  sqlite_adapter.py
src/adapters/outbound/data_sources/: fastf1_adapter.py  fia_adapter.py  jolpica_adapter.py
src/adapters/outbound/llm/: gemini_adapter.py
src/adapters/outbound/vector_store/: qdrant_adapter.py
src/adapters/retrieval/: retriever_adapter.py
src/agent/: __init__.py  f1_agent.py
src/api/: __init__.py  deps.py  main.py  models.py
src/api/routers/: chat.py  health.py  setup.py
src/application/services/: ask_question.py
src/common/: __init__.py  console.py  debug.py  exception_handler.py  exceptions.py  rate_limiter.py  utils.py
src/composition/: container.py
src/config/: logging.py  settings.py
src/core/domain/: __init__.py  agent.py  document.py  fia_document.py  race_data.py  utils.py
src/core/domain/exceptions/: __init__.py  base.py  configuration.py  data_ingestion.py  embedding.py  llm.py  retrieval.py  validation.py  vector_store.py
src/core/ports/: __init__.py  analytics_port.py  data_source_port.py  embedding_port.py  llm_port.py  vector_store_port.py
src/core/services/: agent_service.py  prompts.py  reranker.py  retrieval_service.py
src/data/: __init__.py  fastf1_loader.py  fia_scraper.py  jolpica_client.py
src/domain/models/: __init__.py
src/domain/services/: prompt_builder.py  query_classifier.py
src/interface/: __init__.py  cli.py
src/llm/: __init__.py  gemini_client.py
src/ports/: llm.py  retrieval.py
src/rag/: __init__.py  embeddings.py  qdrant_store.py  reranker.py  retriever.py  vectorstore.py
tests/: conftest.py  test_fastf1.py  test_infra.py  test_jolpica.py  test_suite.py
tests/integration/: test_api.py
tests/unit/: test_agent_analytics.py  test_ask_question_service.py  test_exceptions.py  test_qdrant_store.py  test_reranker.py  test_sqlite_adapter.py  test_text_normalization.py  test_utils.py
