[project]
name = "f1-penalty-agent"
version = "0.1.0"
description = "AI agent for explaining F1 penalties and FIA regulations to F1 viewers"
authors = [
    {name = "addis"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    # Data collection
    "fastf1>=3.7.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.14.0",
    "pypdf>=6.4.0",
    "lxml>=6.0.0",

    # RAG pipeline
    "sentence-transformers>=5.2.0",
    "chromadb>=1.3.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.0",

    # LLM
    # NOTE: google-generativeai reached EOL on Nov 30, 2025
    # TODO: Migrate to google-genai package (requires code changes)
    # See: https://ai.google.dev/gemini-api/docs/libraries
    "google-generativeai>=0.8.5",

    # Utilities
    "python-dotenv>=1.2.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "typer>=0.20.0",

    # Optional web UI
    "gradio>=5.49.0",
    "streamlit>=1.52.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
f1agent = "src.interface.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # Allow long lines in prompt strings

[tool.mypy]
python_version = "3.12"
strict = true
